--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,9 @@ next-env.d.ts
 
 # Editor directories and files
 .idea
-.vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
 *.suo
 *.ntvs*
 *.njsproj
